.archived/helmcharts/jenkins/jenkins-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jenkins-ingress
  namespace: cicd-jenkins
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/force-ssl-redirect: "true"
    traefik.ingress.kubernetes.io/forwarded-headers-insecure: "true"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - jenkins.cicd.com
      secretName: jenkins-tls
  rules:
    - host: jenkins.cicd.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cicd-jenkins
                port:
                  number: 8080
